--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="cars.jpg" alt="centered image" width="800" height="500"  />
         </center>
         
-        <center>   <strong>CARS</strong> <font size="1"</font>
+        <center>   <strong>I LOVE CARS</strong> <font size="1"</font>
         </center>
      
     </body>
